// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator Paginator with (total > perPage && total % perPage != 0) && ( currentPage <= (1 + total / perPage) 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  color: #FFF;
  background: #586A74;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      2
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      3
    </span>
  </div>
  <div
    className="c4"
  >
    <span>
      4
    </span>
  </div>
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage != 0) && ( currentPage > (1 + total / perPage) 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage == 0) && ( currentPage <= total/perPage)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  color: #FFF;
  background: #586A74;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c4"
  >
    <span>
      2
    </span>
  </div>
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage == 0) && ( currentPage > total/perPage)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in actualPage value 0 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in currentPage value -20 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in currentPage value String 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      2
    </span>
  </div>
  <div
    className="c4"
  >
    ...
  </div>
  <div
    className="c4"
  >
    ...
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      99
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      100
    </span>
  </div>
</div>
`;

exports[`Paginator Paginator with error, currentPage too big 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
</div>
`;

exports[`Paginator Paginator with error, perPage < 0 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with total < perPage && (currentPage > 1)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator renders correctly 1 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  color: #FFF;
  background: #586A74;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:hover {
  background: #F3F6F8;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c4:hover {
  background: #F3F6F8;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      2
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      3
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      4
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      5
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      6
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      7
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      8
    </span>
  </div>
  <div
    className="c3"
  >
    ...
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      99
    </span>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <span>
      100
    </span>
  </div>
  <div
    className="c4"
    onClick={[Function]}
  >
    <div
      className="c5"
    >
      <i
        className="icon-siguiente"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 2 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator renders correctly 3 - big numbers 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  color: #FFF;
  background: #586A74;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      2
    </span>
  </div>
  <div
    className="c4"
  >
    ...
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      407
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      408
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      409
    </span>
  </div>
  <div
    className="c5"
  >
    <span>
      410
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      411
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      412
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      413
    </span>
  </div>
  <div
    className="c4"
  >
    ...
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      459
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      460
    </span>
  </div>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-siguiente"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 4 - with sx 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
  padding: 50px;
  color: black;
  background-color: lightgray;
  font-size: 20px;
  font-family: inherit;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  color: #FFF;
  background: #586A74;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
}

<div
  className="c0"
  color="black"
  fontFamily="inherit"
  fontSize="20px"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      2
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      3
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      4
    </span>
  </div>
  <div
    className="c4"
  >
    <span>
      5
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      6
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      7
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      8
    </span>
  </div>
  <div
    className="c5"
  >
    ...
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      59
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      60
    </span>
  </div>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-siguiente"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 5 - with selectedPageStyle 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  color: #FFF;
  background: #586A74;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      2
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      3
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      4
    </span>
  </div>
  <div
    className="c4"
    style={
      {
        "borderBottom": "5px dotted purple",
        "color": "purple",
        "fontWeight": "bold",
      }
    }
  >
    <span>
      5
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      6
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      7
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      8
    </span>
  </div>
  <div
    className="c5"
  >
    ...
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      59
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      60
    </span>
  </div>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-siguiente"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 6 - with sx and selectedPageStyle 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Nunito Sans;
  font-size: 11.11px;
  cursor: pointer;
  color: #2E393F;
  font-weight: 600;
  gap: 4px;
  padding: 50px;
  color: black;
  background-color: lightgray;
  font-size: 20px;
  font-family: inherit;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  border-radius: 6px;
}

.c1:hover {
  background: #F3F6F8;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  place-items: center;
  width: 16px;
  height: 16px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  background: #F3F6F8;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 32px;
  height: 32px;
  border-radius: 6px;
  display: grid;
  place-items: center;
  color: #FFF;
  background: #586A74;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
}

<div
  className="c0"
  color="black"
  fontFamily="inherit"
  fontSize="20px"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-atras"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      1
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      2
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      3
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      4
    </span>
  </div>
  <div
    className="c4"
    style={
      {
        "borderBottom": "5px dotted purple",
        "color": "purple",
        "fontWeight": "bold",
      }
    }
  >
    <span>
      5
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      6
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      7
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      8
    </span>
  </div>
  <div
    className="c5"
  >
    ...
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      59
    </span>
  </div>
  <div
    className="c3"
    onClick={[Function]}
  >
    <span>
      60
    </span>
  </div>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <i
        className="icon-siguiente"
        style={
          {
            "fontSize": "16px",
            "height": "16px",
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;
